docs/grammar.txt
prim = "(" expr ")" | ident args? | num
funcall = ident "(" (assign ("," assign)*)? ")"
postfix = prim ("[" expr "]")*
unary = ("+" | "-" | "*" | "&") unary
		| postfix
mul = unary ("*" unary | "/" unary)*
add = mul ("+" mul | "-" mul)*
relational = add ("<" add | "<=" add | ">" add | ">=" add)*
equality = relational ("==" relational | "!=" relational)*
assign = equality ("=" assign)?
expr = assign
expr-stmt = expr? ";"
declspec = "long" | "int"
direct-declarator = ident ("[" num "]")*
declarator = "*"* direct-declarator
initalizer = expr
init-declarator = declarator
				| declarator "=" initalizer
declaration = declspec init-declarator ("," init-declarator)* ";"
parameter-declaration = declspec declarator
parameter-list = parameter-declaration ("," parameter-declaration)*
function-definition = declspec declarator "(" parameter-list? ")" compound-stmt
stmt = "return" expr ";"
      | "if" "(" expr ")" stmt ("else" stmt)?
      | "for" "(" expr-stmt expr? ";" expr? ")" stmt
      | "for" "(" declaration expr? ";" expr? ")" stmt
      | "while" "(" expr ")" stmt
      | "do" stmt "while" "(" expr ")" ";"
	  | compound-stmt
	  | expr-stmt
compound-stmt = "{" (declaration | stmt)* "}"
prog = stmt*
